K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivebox-service
  labels:
    app: hivebox
spec:
  selector:
    app: hivebox
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
